# Dark-Ages-AI-Bot

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_dlls.bat  build_proxy.bat  setup_proxy.bat
src/: pop.sln
src/Daemon/: Daemon.cpp  Daemon.vcxproj
src/pop/: CODING_STANDARD.md  animations.h  constants.h  data_manager.cpp  data_manager.h  data_templates.h  datafile.h  dll_main.cpp  dllmain.cpp  framework.h  game_observers.h  gamestate_manager.cpp  gamestate_manager.h  handle_registry.cpp  hostile_players.h  initialization.h  intercept_manager.cpp  intercept_manager.h  inventory_manager.h  io.h  item.h  migration_plan.md  network_communicator.h  network_functions.h  object_manager.h  overlay_manager.cpp  overlay_manager.h  packet_handler.h  packet_processor.h  packet_reader.h  packet_registry.h  packet_structures.h  packet_writer.h  pch.h  player.h  pop.vcxproj  recv_handlers.cpp  script_manager.cpp  script_manager.h  send.cpp  (+15 more)
src/pop/core/: interceptor.cpp  interceptor.h
src/pop/game/: data_loader.cpp  data_loader.h  entity.cpp  entity.h  game_data_manager.cpp  game_data_manager.h  network_interface.cpp  network_interface.h  player.cpp  player.h  position.cpp  position.h  sprite.cpp  sprite.h  sprite_manager.cpp  sprite_manager.h
src/pop/network/: packet.cpp  packet.h  packet_handler.h  packet_handler_registry.cpp  packet_handler_registry.h  packet_reader.cpp  packet_reader.h  packet_writer.cpp  packet_writer.h
src/pop/network/packet_handlers/: base_packet_handler.cpp  base_packet_handler.h  chat_message_handler.cpp  chat_message_handler.h  lambda_packet_handler.h  player_info_handler.cpp  player_info_handler.h
src/pop/ui/: game_menu.cpp  game_menu.h  ui_manager.cpp  ui_manager.h
src/pop/utils/: input_handler.cpp  input_handler.h  logging.cpp  logging.h  migration_helper.h
src/pop/utils/config/: config_manager.cpp  config_manager.h
src/pop/utils/memory/: memory_manager.h  memory_scanner.cpp  memory_scanner.h
